[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/w1_boss.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Totem.gd" type="Script" id=2]
[ext_resource path="res://src/guns/Infected_Ring.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Damage_Flicker.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 31.5 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 96, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 95.5, 30.5 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 42, 33.5 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "static",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 32.5, 32.5 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 27 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 33, 32 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 32, 223 )

[sub_resource type="Animation" id=38]
resource_name = "spin"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Totem" type="KinematicBody2D"]
script = ExtResource( 2 )
Infected_Bullet = ExtResource( 3 )

[node name="LocalNode" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="LocalNode"]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalNode"]
position = Vector2( 0, 0.5 )
shape = SubResource( 4 )

[node name="Damage_Flicker" parent="LocalNode" instance=ExtResource( 4 )]
margin_left = -31.0
margin_top = -30.0
margin_right = 33.0
margin_bottom = 34.0
color = Color( 0.415686, 0, 0, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="CannonNode" type="Area2D" parent="."]
position = Vector2( 0, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CannonNode"]
frames = SubResource( 6 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="CannonNode"]
position = Vector2( 64, 0 )
frames = SubResource( 8 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="CannonNode"]
position = Vector2( -64, 0 )
frames = SubResource( 8 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CannonNode"]
shape = SubResource( 9 )

[node name="Damage_Flicker" parent="CannonNode" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="BomberNode" type="Area2D" parent="."]
position = Vector2( 0, 128 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BomberNode"]
frames = SubResource( 11 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="BomberNode"]
position = Vector2( 64, 0 )
frames = SubResource( 13 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="BomberNode"]
position = Vector2( -64, 0 )
frames = SubResource( 13 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BomberNode"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 14 )

[node name="Damage_Flicker" parent="BomberNode" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.305882, 0, 0.235294, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="ChargerNode" type="Area2D" parent="."]
position = Vector2( 0, 192 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ChargerNode"]
frames = SubResource( 16 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="ChargerNode"]
position = Vector2( 64, 0 )
frames = SubResource( 18 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="ChargerNode"]
position = Vector2( -64, 0 )
frames = SubResource( 18 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargerNode"]
position = Vector2( 0, -0.5 )
shape = SubResource( 19 )

[node name="Damage_Flicker" parent="ChargerNode" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.184314, 0, 0, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="WallerNode" type="Area2D" parent="."]
position = Vector2( 0, 256 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="WallerNode"]
frames = SubResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallerNode"]
shape = SubResource( 22 )

[node name="Damage_Flicker" parent="WallerNode" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.52549, 0.270588, 0, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="InfectedNode" type="Area2D" parent="."]
position = Vector2( 0, 320 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="InfectedNode"]
frames = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfectedNode"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 25 )

[node name="Damage_Flicker" parent="InfectedNode" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 1 )
total_time = 0.5
flicker_time = 0.1

[node name="Legs" type="Area2D" parent="."]
position = Vector2( 0, 384 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Legs"]
frames = SubResource( 30 )
animation = "standing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs"]
shape = SubResource( 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 192 )
shape = SubResource( 32 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StaticTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="StaticDelay" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spin = SubResource( 38 )

[connection signal="area_entered" from="LocalNode" to="." method="_on_LocalNode_area_entered"]
[connection signal="area_entered" from="CannonNode" to="." method="_on_CannonNode_area_entered"]
[connection signal="area_entered" from="BomberNode" to="." method="_on_BomberNode_area_entered"]
[connection signal="area_entered" from="ChargerNode" to="." method="_on_ChargerNode_area_entered"]
[connection signal="area_entered" from="WallerNode" to="." method="_on_WallerNode_area_entered"]
[connection signal="area_entered" from="InfectedNode" to="." method="_on_InfectedNode_area_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="StaticTimer" to="." method="_on_StaticTimer_timeout"]
[connection signal="timeout" from="StaticDelay" to="." method="_on_StaticDelay_timeout"]
